# glucosim

./: README.md  pyproject.toml
outreach/2026-03-05/: 01-bergman-richard.md  02-dallaman-chiara.md  03-hovorka-roman.md  04-kovatchev-boris.md  05-xie-jinyu.md  06-fox-ian.md  07-zhu-taiyu.md  08-lee-sooho.md  09-ngo-peter.md  10-hettiarachchi-chirath.md
paper/: glucosim.tex  references.bib
results/: discovery.json  training_results.json
src/glucosim/: __init__.py
src/glucosim/agents/: __init__.py  heuristic.py  ppo.py  random_agent.py
src/glucosim/benchmarks/: __init__.py  environments.py  runner.py
src/glucosim/data/: __init__.py
src/glucosim/envs/: __init__.py  basal_control.py  bolus_advisor.py  closed_loop.py  wrappers.py
src/glucosim/models/: __init__.py  bergman.py  meal.py  patient.py  sensor.py
src/glucosim/training/: __init__.py  evaluate.py  train.py
tests/: test_agents.py  test_basal_control.py  test_benchmarks.py  test_bergman.py  test_bolus_advisor.py  test_closed_loop.py  test_integration.py  test_meal.py  test_patient.py  test_sensor.py  test_wrappers.py
